--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -1,1 +1,28 @@
-<p>investment-results works!</p>
+@if (!results) {
+    <p>Please enter some values and press "calculate"</p>
+}
+@else {
+    <table>
+        <thead>
+            <tr>
+                <th>Year</th>
+                <th>Invest Value</th>
+                <th>Interest (Year)</th>
+                <th>Total Interest</th>
+                <th>Invested Capital</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (result of results; track $index) {
+                <tr>
+                    <td>{{result.year}}</td>
+                    <td>{{result.valueEndOfYear}}</td>
+                    <td>{{result.interest}}</td>
+                    <td>{{result.totalInterest}}</td>
+                    <td>{{result.totalAmountInvested}}</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+
