--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            @for (result of results; track $index) {
+            @for (result of results(); track $index) {
                 <tr>
                     <td>{{result.year}}</td>
                     <td>{{result.valueEndOfYear | currency: "USD"}}</td>
